First major changes

--- a/index.html
+++ b/index.html
@@ -8,6 +8,20 @@
     <title>Band Website</title>
 </head>
 <body>
-    
+    <nav>
+        <div class="navsection">
+            <div class="navsection__title">
+                <h1>BANDSITE</h1>
+            </div>
+                <div class="navsection__menu--container">
+                    <div class="nav__text--container">
+                        <h3>Biography</h3>
+                    </div>
+                    <div class="nav__text--container">
+                        <h3>Shows</h3>
+                    </div>
+                </div>
+        </div>
+    </nav>
 </body>
 </html>
