--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             </div>
                 <div class="navsection__menu--container">
                     <div class="nav__text--container">
-                        <h3>Biography2</h3>
+                        <h3>Biography</h3>
                     </div>
                     <div class="nav__text--container">
                         <h3>Shows</h3>
