--- a/index.html
+++ b/index.html
@@ -15,10 +15,10 @@
             </div>
                 <div class="navsection__menu--container">
                     <div class="nav__text--container">
-                        <h3>Biography</h3>
+                        <a href="#index.html" class="active"><h3>Biography</h3></a>
                     </div>
                     <div class="nav__text--container">
-                        <h3>Shows</h3>
+                        <a href="#" class="active"></a><h3>Shows</h3></a>
                     </div>
                 </div>
         </div>
