ActivePage Underline done

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                         <a href="#index.html" class="active"><h3>Biography</h3></a>
                     </div>
                     <div class="nav__text--container">
-                        <a href="#" class="active"></a><h3>Shows</h3></a>
+                        <a href="#" ></a><h3>Shows</h3></a>
                     </div>
                 </div>
         </div>
