--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <nav>
         <div class="navsection">
             <div class="navsection__title">
-                <h1>BANDSITE</h1>
+                <img src="assets/Logo/Logo-bandsite.svg" class="logo">
             </div>
                 <div class="navsection__menu--container">
                     <div class="nav__text--container">
