--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <nav>
         <div class="navsection">
             <div class="navsection__title">
-                <img src="assets/Logo/Logo-bandsite.svg" class="logo">
+                <img src="assets/Logo/Logo-bandsite.svg" alt="Bandsite logo" class="logo">
             </div>
                 <div class="navsection__menu--container">
                     <div class="nav__text--container">
@@ -23,5 +23,13 @@
                 </div>
         </div>
     </nav>
+
+    <div class="hero__section">
+        <div class="hero__img--container">
+            <img src="assets/Images/hero-bio.jpg" alt="Hero" width="100%">
+                <h1>The Bees Knees</h1>
+        </div>
+    </div>
+
 </body>
 </html>
