--- a/index.html
+++ b/index.html
@@ -31,5 +31,24 @@
         </div>
     </div>
 
+    <div class="about__section">
+        <h1> About the Musicians</h1>
+            <div class="musician__image--container">
+                <img src="assets/Images/band.jpg" alt="live show" width="100%">
+            </div>
+                <div class="about__section--text">
+                    <h3>“We push each other to be the best. It’s not uncommon for 
+                        one of us to say ‘this needs to be better, back to the drawing board’”<br>
+                        </h3>
+                        <h3>- Bryan Teddy, lead vocalist of The Bees Knees</h3>
+                            <h4>The Bees Knees</h4>
+                                <p>The Bees Knees is a pop rock band originating from San Francisco, California. 
+                                    The band consists of lead vocalist Bryan Teddy, guitarist Mack Tolkens, guitarist Andrew Green, 
+                                    bassist Kent Zulkee and drummer Freddie Fischer. The band achieved its first commercial success 
+                                    as an unsigned act, drawing attention from manager Cam Adams. Having worked with other popular acts 
+                                    (The Elephant In The Room, One Trick Pony, The Cat’s Meow), Adams was confident the band could 
+                                    succeed even further, pushing them to sign with Magenta Records.</p>
+                </div>
+    </div>
 </body>
 </html>
