--- a/index.html
+++ b/index.html
@@ -34,27 +34,32 @@
     <div class="about__section">
         <h1> About the Musicians</h1>
             <div class="musician__image--container">
-                <img src="assets/Images/band.jpg" alt="live show" width="100%">
+                <!----<img src="assets/Images/band.jpg" alt="live show" width="100%">--->
             </div>
                 <div class="about__section--text">
-                    <h3>“We push each other to be the best. It’s not uncommon for 
+                    <h2>“We push each other to be the best. It’s not uncommon for 
                         one of us to say ‘this needs to be better, back to the drawing board’”<br>
-                        </h3>
+                        </h2>
                         <h3>- Bryan Teddy, lead vocalist of The Bees Knees</h3>
                             <h4>The Bees Knees</h4>
+                            <div class="about__body--container">
+                                <div class="about__body--paragraph">
                                 <p>The Bees Knees is a pop rock band originating from San Francisco, California. 
                                     The band consists of lead vocalist Bryan Teddy, guitarist Mack Tolkens, guitarist Andrew Green, 
                                     bassist Kent Zulkee and drummer Freddie Fischer. The band achieved its first commercial success 
                                     as an unsigned act, drawing attention from manager Cam Adams. Having worked with other popular acts 
                                     (The Elephant In The Room, One Trick Pony, The Cat’s Meow), Adams was confident the band could 
                                     succeed even further, pushing them to sign with Magenta Records.</p>
-
+                                </div>
+                                <div class="about__body--paragraph">
                                  <p>From there, the band has soared, gaining international recognition and ranking in the top 10 on the 
                                     Poster Charts. New fans immediately fell in love with the band’s original and organic attitude, solidifying 
                                     their place as one of the hottest and fastest up and coming acts of this century. Fans affectionately refer 
                                     to themselves as “The Hive” and are drawn to their candid and authentic performances on stage. Looking forward 
                                     to touring in the future, The Bees Knees are currently recording their second studio album, looking to be released 
-                                    in late 2021.</p>   
+                                    in late 2021.</p>  
+                                </div>
+                            </div> 
                 </div>
     
                 <div class="gallery__section">
