--- a/index.html
+++ b/index.html
@@ -63,9 +63,11 @@
                             </div> 
                 </div>
     </div>
+            <div class="gallery__title">
+                <h1>Photo Gallery</h1>
+            </div>
                 <div class="gallery__section">
                     <div class="gallery__text">
-                        <h1>Photo Gallery</h1>
                     </div>
                         <div class="gallery__container">
                             <!--<div class="gallery__image--continer"></div>-->
