--- a/index.html
+++ b/index.html
@@ -67,8 +67,6 @@
                 <h1>Photo Gallery</h1>
             </div>
                 <div class="gallery__section">
-                    <div class="gallery__text">
-                    </div>
                         <div class="gallery__container">
                             <!--<div class="gallery__image--continer"></div>-->
                             <img src="assets/Images/Photo-gallery-1.jpg" alt="smokescreen1">
@@ -82,6 +80,12 @@
                             <img src="assets/Images/Photo-gallery-9.jpg" alt="Confetti fallong">
                         </div>
                 </div>
+
+        <div class="footer__section">
+            <footer class="footer__container">
+                <h1>Get in Touch</h1>
+            </footer>
+        </div>
     
     
 </body>
