--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
                 </div>
     </div>
     
-            <div class="gallery__title">
+            <div class="gallery__title" style="margin: 0;">
                 <h1>Photo Gallery</h1>
             </div>
                 <div class="gallery__section">
