--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
                 </div>
 
 
-                <div class="footer__title">
+                <div class="footer__title--extended">
                     <h3>Carson Whyte</h3>
                     <h3>Arch Enterotainment</h3>
                 </div>
