--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
                     <p>Booking Agent for <br> US / South America / Japan</p>
                 </div>
 
-                <div class="footer__paragraph">
+                <div class="footer__paragraph--extended">
                     <p>Booking Agent for<br> UK / EU /AU</p>
                 </div>
 
