Bartials Creation, Imported new assets

--- a/index.html
+++ b/index.html
@@ -81,7 +81,9 @@
                             <div class="img__container"><img src="assets/Images/Photo-gallery-9.jpg" alt="Confetti fallong"></div>
                         </div>
                 </div>
-
+                <section class="comment__section">
+                    <img class="user__icon" src="/assets/3.0 - Assets/Images/Mohan-muruge.jpg">
+                </section>
             <footer class="footer__container">
                 <h1>Get in Touch</h1>
 
