--- a/index.html
+++ b/index.html
@@ -91,11 +91,9 @@
                         <div class="form__section--container">
                             <p>NAME</p>
                             <form class="comment__form" action="./scripts/index-page.js">
-                                <label for="userName"></label>
-                                <input class="form__username" type="text" placeholder="Enter your name">
+                                <input id="user__name" class="form__username" type="text" placeholder="Enter your name">
                             <p>COMMENT</p>
-                                <label for="comments"></label>
-                                <textarea class="form__comment" rows="10" placeholder="Add a new comment"></textarea>
+                                <textarea id="comment__box" class="form__comment" rows="10" placeholder="Add a new comment"></textarea>
                                 <button type="submit">COMMENT</button>
                             </form>
                         </div>
