Need to start Manipulating DOM

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                         <a href="#index.html" class="active"><h3>Biography</h3></a>
                     </div>
                     <div class="nav__text--container">
-                        <a href="#" ></a><h3>Shows</h3></a>
+                        <a href="./pages/shows.html" class="inactive" ><h3>Shows</h3></a>
                     </div>
                 </div>
         </div>
