--- a/index.html
+++ b/index.html
@@ -81,21 +81,27 @@
                             <div class="img__container"><img src="assets/Images/Photo-gallery-9.jpg" alt="Confetti fallong"></div>
                         </div>
                 </div>
-                <section class="comment__section">
-                    <h1>Join the Conversation</h1>
+                <section class="comment__section">    
+                    <div class="comment__section--title">
+                        <h1>Join the Conversation</h1>
+                    </div>
 
                     <div class="comment__section--container">
                         <div class= "user__icon--container">
                             <img class="user__icon" src="/assets/3.0 - Assets/Images/Mohan-muruge.jpg">
                         </div>
                         <div class="form__section--container">
-                            <p>NAME</p>
-                            <form class="comment__form" action="./scripts/index-page.js">
-                                <label for="userName"></label>
-                                <input class="form__username" type="text" placeholder="Enter your name">
-                            <p>COMMENT</p>
-                                <label for="comments"></label>
-                                <textarea class="form__comment" rows="10" placeholder="Add a new comment"></textarea>
+                            <div class="form__name--container">
+                                <div class="form__section--title1">
+                                    <p>NAME</p>
+                                </div>
+                                     <form class="comment__form" action="./scripts/index-page.js">
+                                        <input class="form__username" type="text" placeholder="Enter your name">
+                            </div>
+                            <div class="form__section--title2">
+                                <p>COMMENT</p>
+                            </div>
+                                <textarea class="form__comment--area" rows="10" placeholder="Add a new comment"></textarea>
                                 <button type="submit">COMMENT</button>
                             </form>
                         </div>
