some css changes

--- a/pages/shows.html
+++ b/pages/shows.html
@@ -113,6 +113,6 @@
                 </div>
             </footer>
     
-    <script src="../scripts/build-shows-page.js"></script>
+    <script src="../scripts/build-shows-page.js" defer></script>
 </body>
 </html>
