--- a/index.html
+++ b/index.html
@@ -91,10 +91,10 @@
                             </div>
                             <div class="form__section--container">
                                 <p>NAME</p>
-                                <form class="comment__form" id="comment_form" action="./scripts/index-page.js">
-                                    <input id="user__name" class="form__username" type="text" placeholder="Enter your name" required>
+                                <form class="comment__form" id="postComment" action="./scripts/index-page.js">
+                                    <input type="text" name="name" id="userName" class="form__username" placeholder="Enter your name" required>
                                 <p>COMMENT</p>
-                                    <textarea id="comment__box" class="form__comment" rows="10" placeholder="Add a new comment" required></textarea>
+                                    <textarea id="commentBox" class="comment__textbox" rows="10" placeholder="Add a new comment" required></textarea>
                                     <input id="submit__button" type="submit" value="COMMENT"></input>
                                 </form>
                             </div>
