--- a/index.html
+++ b/index.html
@@ -89,8 +89,9 @@
                             <div class= "user__icon--container">
                                 <img class="user__icon" src="/assets/3.0 - Assets/Images/Mohan-muruge.jpg">
                             </div>
-                            
+                                <div class="form__username--input">
                                 <p>NAME</p>
+                                </div>
                                 <form class="comment__form" id="postComment" action="./scripts/index-page.js">
                                     <input type="text" name="name" id="userName" class="form__username" placeholder="Enter your name" required>
                                 <p>COMMENT</p>
