--- a/index.html
+++ b/index.html
@@ -89,16 +89,17 @@
                             <div class= "user__icon--container">
                                 <img class="user__icon" src="/assets/3.0 - Assets/Images/Mohan-muruge.jpg">
                             </div>
+                            <div class="form__container">
                                 <div class="form__username--input">
                                 <p>NAME</p>
-                                </div>
                                 <form class="comment__form" id="postComment" action="./scripts/index-page.js">
                                     <input type="text" name="name" id="userName" class="form__username" placeholder="Enter your name" required>
+                                </div>
                                 <p>COMMENT</p>
                                     <textarea id="commentBox" class="comment__textbox" rows="10" placeholder="Add a new comment" required></textarea>
                                     <input id="submit__button" type="submit" value="COMMENT"></input>
                                 </form>
-                            
+                            </div>
                         </div>
                         <div class="comment__card" id="commentCard"></div>
                     </div>
