--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
                                 </div>
                                 <p>COMMENT</p>
                                     <textarea id="commentBox" class="comment__textbox" rows="10" placeholder="Add a new comment" required></textarea>
-                                    <input id="submit__button" type="submit" value="COMMENT"></input>
+                                    <input id="submit__button" type="submit" value="COMMENT" class="comment__button"></input>
                                 </form>
                             </div>
                         </div>
