--- a/pages/shows.html
+++ b/pages/shows.html
@@ -104,9 +104,9 @@
                     <P>cwhyte@archentertainment</P>
                 </div>
 
-                <div class="footer__logo--container">
-                    <img src="../assets/Logo/Logo-bandsite.svg" alt="Bandsite logo" class="logo">
-                </div>
+                <!-- <div class="footer__logo--container"> -->
+                    <img src="../assets/Logo/Logo-bandsite.svg" alt="Bandsite logo" class="site__logo">
+                <!-- </div> -->
 
                 <div class="footer_copyright">
                 <p>Copyright The Bees Knees &#169; 2021 All Rights Reserved</p>
