sHOWS PAGE DONE

--- a/pages/shows.html
+++ b/pages/shows.html
@@ -41,19 +41,26 @@
     </div>
                 <section id="show__section--selector" class="shows__section">
                     <h1>Shows</h1>
-                    <!-- <h1>Shows</h1>
-                    
-                    <p>DATE</p>
-                    <h3>Mon Sept 06 2021</h3>
+                    <div class="shows__container">
+                        <!-- Show cards here added dynamically-->
+                    </div>
 
-                    <p>VENUE</p>
-                    <h4>Ronald Lane</h4>
-
-                    <p>LOCATION</p>
-                    <h4>San Francisco, CA</h4>
-
-                    <button class="ticket__buy--button"></button> -->
-                <div class="shows__container"></div>
+                    <!-- <button class="ticket__buy--button"></button> --> 
+                    <div class="table__container">
+                        <table class="show__table">
+                            <thead>
+                                <tr>
+                                    <th>Date</th>
+                                    <th>Venue</th>
+                                    <th>Location</th>
+                                    <th></th>
+                                </tr>
+                            </thead>
+                            <tbody>
+                                <!-- Table rows will be dynamically added here -->
+                            </tbody>
+                        </table>
+                    </div>
                 </section>
             <footer class="footer__container">
             <!-- <div class="footer__column1"> -->
